--- a/styles/Nav.css
+++ b/styles/Nav.css
@@ -2,7 +2,7 @@
   background: var(--navbarbg);
   width: 100%;
   height: 70px;
-  z-index: 999;
+  z-index: 9;
   position: sticky;
   top: 0;
 }
@@ -138,11 +138,11 @@
   box-shadow: -2px 4px 6px 1px var(--bg-shadow);
   border-radius: 9px;
 }
-.Navbar .Profile .sub-menu::before{
+.Navbar .Profile .sub-menu::before {
   content: "";
   width: 20px;
   height: 20px;
-  transform:rotate(45deg);
+  transform: rotate(45deg);
   background: var(--bg);
   position: absolute;
   top: -9px;
@@ -163,7 +163,7 @@
 .Navbar .Profile .sub-menu .item:nth-child(3) {
   border-top: 1px solid black;
 }
-.Navbar .Profile .sub-menu .item span{
+.Navbar .Profile .sub-menu .item span {
   padding: 0 0.5rem;
 }
 
@@ -319,16 +319,13 @@
 .bottom_menu .column a .fa-user-circle {
   font-size: 1.2rem;
 }
-@media screen and (min-width:900px){
-  .bottom_menu{
+@media screen and (min-width: 900px) {
+  .bottom_menu {
     display: none;
   }
-  
 }
 
-
-----------------------------------------------------Dev 
-.ContForm {
+----------------------------------------------------Dev .ContForm {
   width: 100%;
   height: 100%;
   padding: 30px 15px;
@@ -379,64 +376,11 @@ input[type="text"] {
   margin-top: 10px;
 }
 /* ------------------------------------------------assets css  */
-
-.spinner {
-  width: 12rem;
-  height: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #fbf7f4;
-  display: flex;
-  align-items: center;
-  font-size: 1.3rem;
-  border: none;
-  background: #1d3557;
-  color: #f1faee;
-  padding: 0.8rem 1.5rem;
-  border-radius: 2rem;
-  cursor: pointer;
-  transition: 0.3s ease;
-  box-shadow: 0 1rem 2rem -1rem rgba(0, 0, 0, 0.445);
-  margin: auto auto auto auto;
-}
-
-.spinner:hover {
-  background: #003049;
-  color: #eae2b7;
-  box-shadow: 0 1rem 1rem -1rem rgba(0, 0, 0, 0.445);
-}
-
-.btn__text {
-  margin-left: 0.8rem;
-  font-size: 15px;
-}
-
-.loding {
-  width: 1.5rem;
-  height: 1.5rem;
-  display: inline-block;
-  border: 3px solid #dddf00;
-  border-top-color: transparent;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  animation: spin 1s infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0);
-  }
-
-  50% {
-    transform: rotate(180deg);
-    border-top-color: #fcab41;
-    border-bottom-color: #80ffdb;
-    border-right-color: transparent;
-    border-left-color: transparent;
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.Loader {
+  width: 0%;
+  position: absolute;
+  top: 0;
+  z-index: 999;
+  height: 4px;
+  background: #1411e7;
 }
